title text color contrast fixes (a11y)

--- a/app/assets/stylesheets/website/components/breadcrumbs.scss
+++ b/app/assets/stylesheets/website/components/breadcrumbs.scss
@@ -5,7 +5,7 @@
 }
 
 .c-breadcrumbs__link {
-  color: get-gray(2);
+  color: get-gray(3);
   &:hover,
   &:focus {
     color: $green-d;
@@ -13,7 +13,7 @@
 }
 
 .c-breadcrumbs__item {
-  color: get-gray(2);
+  color: get-gray(3);
 }
 
 .c-breadcrumbs__divider {
